--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   --clr-contrast2: ;
   --ff-title: "Megrim", cursive;
   --ff-primary: ;
-  --ff-accent: ;
+  --ff-accent: "Kavivanar", cursive;
 }
 
 *,
@@ -22,16 +22,16 @@ body {
   background-image: url("./images/art-supplies-bg.png");
   background-size: cover;
   height: 100vh;
-  padding-top: 20px;
+  padding-top: 40px;
 }
 .page-container {
   color: var(--clr-light);
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   background-color: blue;
   width: 1000px;
-  padding: 60px 0;
+  padding: 20px 0 30px 0;
   border-radius: 5px;
   background: linear-gradient(
     to right top,
@@ -51,30 +51,39 @@ body {
 .title {
   font-size: 3rem;
   font-family: var(--ff-title);
+  margin-bottom: 10px;
 }
 .grid-container {
+  cursor: pointer;
   background-color: black;
-  border: 10px solid black;
+  /* border: 10px solid black; */
   display: grid;
   width: 500px;
   height: 500px;
-  /* margin: auto; */
+  margin-top: 10px;
+  box-shadow: 5px 5px 7px 3px rgba(13, 23, 26, 0.3);
 }
-
+.grid-container > div {
+  transition: 0.2s ease-in-out;
+}
 /* slider start */
 .slidecontainer {
   width: 200px;
 }
 .slidecontainer > p {
+  color: white;
+  letter-spacing: 0.1rem;
+  font-family: var(--ff-accent);
+  text-shadow: 1px 1px black;
   text-align: center;
   margin: 5px;
 }
 .slider {
   -webkit-appearance: none;
   width: 100%;
-  height: 30px;
-  background: #d3d3d3;
-  border: 4px solid blue;
+  height: 10px;
+  background: linear-gradient(to right, rgb(255, 255, 255), rgb(27, 106, 126));
+  border: 1px solid black;
   border-radius: 19px;
   outline: none;
   opacity: 0.7;
@@ -83,37 +92,96 @@ body {
 }
 
 .slider:hover {
-  opacity: 1;
+  /* opacity: 1; */
 }
 
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
+  border: 1px solid black;
   background: blue;
   cursor: pointer;
 }
 
 .slider::-moz-range-thumb {
-  width: 30p;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
+  border: 1px solid black;
   background: blue;
   cursor: pointer;
 }
 /* slider end */
 .btns {
+  height: 500px;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin-right: 40px;
+  padding: 0 20px;
+  background: linear-gradient(
+    to right top,
+    rgba(255, 255, 255, 0.2),
+    rgba(235, 13, 255, 0.3)
+  );
+
+  backdrop-filter: blur(5px);
+  box-shadow: 5px 5px 7px 3px rgba(13, 23, 26, 0.3);
+}
+.btns > div {
+  text-align: center;
+  /* background-color: black; */
+  width: 200px;
+  padding: 10px;
+  /* border-radius: 30px; */
+  background: linear-gradient(
+    to right top,
+    rgba(255, 255, 255, 0.2),
+    rgba(27, 182, 221, 0.3)
+  );
+
+  backdrop-filter: blur(5px);
+  /* box-shadow: 0 0 7px 3px rgba(4, 106, 131, 0.3); */
+}
+.colorInput {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-right: 20px;
 }
 button {
+  color: black;
+  cursor: pointer;
+  border-radius: 15px;
   padding: 5px 15px;
-  margin: 10px;
+  background: linear-gradient(to right top, #dce9a1, #16bfc5);
+  border: none;
+  box-shadow: 0 0 2px 2px rgba(58, 58, 58, 0.6);
+
+  /* margin: 10px; */
+}
+label,
+.instruction {
+  color: white;
+  text-shadow: 1px 1px black;
+  font-family: var(--ff-accent);
+  margin-bottom: 5px;
+  /* margin-top: 10px; */
+}
+input {
+  cursor: pointer;
+  background-color: transparent;
+  padding: none;
+  border: none;
+  height: 2rem;
+  /* box-shadow: 0 0 2px 2px rgba(58, 58, 58, 0.6); */
+  /* outline: none; */
+  /* margin-bottom: 10px; */
 }
 .gridItem {
   background-color: white;
