--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
     rgba(4, 106, 131, 0.3)
   );
   backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   margin: auto;
 }
 .grid-container-column {
