--- a/style.css
+++ b/style.css
@@ -36,6 +36,15 @@ body {
   -webkit-backdrop-filter: blur(5px);
   margin: auto;
 }
+@supports (-moz-appearance: none) {
+  .page-container {
+    background: linear-gradient(
+      to right top,
+      rgba(255, 255, 255, 0.5),
+      rgba(4, 106, 131, 0.6)
+    );
+  }
+}
 .grid-container-column {
   display: flex;
   flex-direction: column;
@@ -146,7 +155,17 @@ body {
     rgba(235, 13, 255, 0.3)
   );
   backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   box-shadow: 5px 5px 7px 3px rgba(13, 23, 26, 0.3);
+}
+@supports (-moz-appearance: none) {
+  .btns > div {
+    background: linear-gradient(
+      to right top,
+      rgba(255, 255, 255, 0.5),
+      rgba(235, 13, 255, 0.6)
+    );
+  }
 }
 .colorInput {
   display: flex;
