--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  background-color: blue;
   width: 1000px;
   padding: 20px 0 30px 0;
   border-radius: 5px;
@@ -76,7 +75,7 @@ body {
 }
 .grid-container {
   cursor: pointer;
-  background-color: black;
+  /* background-color: black; */
   display: grid;
   width: 500px;
   height: 500px;
@@ -85,6 +84,38 @@ body {
 }
 .grid-container > div {
   transition: 0.2s ease-in-out;
+}
+.btns {
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin-right: 40px;
+  padding: 0 20px;
+}
+.btns > div {
+  position: relative;
+  text-align: center;
+  width: 200px;
+  padding: 10px;
+  background: linear-gradient(
+    to right top,
+    rgba(255, 255, 255, 0.2),
+    rgba(235, 13, 255, 0.3)
+  );
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  box-shadow: 5px 5px 7px 3px rgba(13, 23, 26, 0.3);
+}
+@supports (-moz-appearance: none) {
+  .btns > div {
+    background: linear-gradient(
+      to right top,
+      rgba(255, 255, 255, 0.5),
+      rgba(235, 13, 255, 0.6)
+    );
+  }
 }
 /* slider start */
 .slidecontainer {
@@ -135,38 +166,7 @@ body {
   cursor: pointer;
 }
 /* slider end */
-.btns {
-  height: 500px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  margin-right: 40px;
-  padding: 0 20px;
-}
-.btns > div {
-  position: relative;
-  text-align: center;
-  width: 200px;
-  padding: 10px;
-  background: linear-gradient(
-    to right top,
-    rgba(255, 255, 255, 0.2),
-    rgba(235, 13, 255, 0.3)
-  );
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  box-shadow: 5px 5px 7px 3px rgba(13, 23, 26, 0.3);
-}
-@supports (-moz-appearance: none) {
-  .btns > div {
-    background: linear-gradient(
-      to right top,
-      rgba(255, 255, 255, 0.5),
-      rgba(235, 13, 255, 0.6)
-    );
-  }
-}
+
 .colorInput {
   display: flex;
   flex-direction: column;
@@ -226,4 +226,108 @@ input {
 }
 .gridItem {
   background-color: white;
+}
+@media screen and (max-width: 800px) {
+  .page-container {
+    width: 100vw;
+  }
+  .grid-container {
+    width: 475px;
+    height: 475px;
+  }
+  .btns {
+    margin-right: 10px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .page-container {
+    position: relative;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    /* height: 100vh */
+    padding: 20px 0;
+    border-radius: none;
+    background: linear-gradient(
+      to right top,
+      rgba(255, 255, 255, 0.2),
+      rgba(4, 106, 131, 0.3)
+    );
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    margin: auto;
+  }
+  .btns {
+    position: relative;
+    width: 100vw;
+    height: auto;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-right: 0;
+    padding: 10px 0;
+    /* background: linear-gradient(
+      to right top,
+      rgba(255, 255, 255, 0.2),
+      rgba(235, 13, 255, 0.3)
+    ); */
+    /* backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px); */
+  }
+
+  #pastel {
+    width: 33%;
+    order: 0;
+  }
+  #erase {
+    width: 33%;
+
+    order: 1;
+  }
+  #clear {
+    width: 33%;
+
+    order: 2;
+  }
+  .colorInput {
+    order: 3;
+  }
+  .slidecontainer {
+    order: 4;
+  }
+  .btns > div {
+    text-align: center;
+    width: auto;
+    padding: 5px;
+    background: none;
+    backdrop-filter: none;
+    box-shadow: none;
+  }
+  .grid-container {
+    display: grid;
+    width: 400px;
+    height: 400px;
+    margin-top: 10px;
+    box-shadow: none;
+  }
+  .slidecontainer {
+    width: auto;
+  }
+  .slidecontainer > p {
+    margin: 0;
+  }
+}
+@media screen and (max-width: 399px) {
+  .grid-container {
+    width: 350px;
+    height: 350px;
+  }
+}
+@media screen and (max-width: 350px) {
+  .grid-container {
+    width: 320px;
+    height: 320px;
+  }
 }
